# prometheus-telegram-bot

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: configuration-reference.md
examples/: bot-config.yaml  docker-compose.yml  main.py  prometheus.yml
src/prometheus_telegram_bot/: __init__.py  application.py  publisher_service.py
src/prometheus_telegram_bot/access_control/: __init__.py  service.py
src/prometheus_telegram_bot/config/: __init__.py  loader.py  models.py
src/prometheus_telegram_bot/entrypoint/: main.py
src/prometheus_telegram_bot/prometheus/: __init__.py  client.py
src/prometheus_telegram_bot/scheduler/: service.py
src/prometheus_telegram_bot/telegram_client/: client.py
src/prometheus_telegram_bot/visualizer/: __init__.py  service.py
tests/: test_access_control.py  test_config.py  test_entrypoint.py  test_publisher_service.py  test_telegram_client.py
